# axiocache

./: .gitignore  CMakeLists.txt  README.md
src/: callbacktimer.cpp  callbacktimer.h  config.h  logger.cpp  logger.h  main.cpp
src/cache/: cachegarbagecollector.cpp  cachegarbagecollector.h  cachemanager.cpp  cachemanager.h  entry.cpp  entry.h  expiredttlstrategy.cpp  expiredttlstrategy.h  icacheclearstrategy.h
